adding a table for litres in a farm

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         your farm. Assume that this is a day's production: </p>
         <table>
            <tr>
-               <th colspan ="2">SHED NO</th>
-               <td colspan ="2"> No. of COWS</td>
-               <td colspan="2"> Avarange production (litres per cow)</td>
+               <th>SHED NO</th>
+               <td> No. of COWS</td>
+               <td> Avarange production (litres per cow)</td>
            </tr>
            <tr>
                <th> Shed A</th>
@@ -46,6 +46,21 @@
             <td>11</td>
            </tr>
         </table>
+        <p>Brookside Dairies has signed a contract with you to buy milk at Ksh.45 per litre for one year.
+            Your mission, if you choose to accept it is to automate the process of getting reports about your farm by
+            writing a function that gives you a report on how much milk is produced per shed and the total amount of
+            milk produced by all sheds.
+            For example:
+            <code>totalProduction();</code><br /><br /><br /><br />
+
+            <h3>The Report For Milk Produced Per Shed.</h3>
+            <div class="outputcontainer">
+                <div class="ouputfield">
+                    <code id="milkpershedoutput">
+                    </code>
+                    <p class="anim">___</p>
+                </div>
+            </div>
     
 </body>
 </html>
