--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
                     <p class="anim">___</p>
                 </div>
             </div>
+            
+            <p> Writing a function that takes in the Brookside buying rate as one of its arguments,
+                gives you a report on how much pay you'll receive over time. For instance,
+                it can give a report on how much you will earn on a weekly basis or even on a yearly basis. For example;
+                <br /><br /><br /><br />
+                The user calls the function;</p><br /><br /><br /><br />
+
+
+            <code>incomeOverTime(selling_price, time);</code><br /><br /><br /><br />
+            <h3>The Report For Weekly and Yearly Income At a Ksh. 45 rate for a Normal Year (365 days).</h3>
+            <div class="outputcontainer">
+                <div class="ouputfield">
+                    <code id="weekreportsoutput">
+                    </code>
+                    <p class="anim">___</p>
+                </div>
+            </div>
+
     
+
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
