--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <p class="anim">___</p>
                 </div>
             </div>
+            <p> Create a report on how much you'll make each month in a leap year. (Hint: Consider using objects.)</p>
 
     
 
