--- a/index.html
+++ b/index.html
@@ -80,7 +80,20 @@
             </div>
             <p> Create a report on how much you'll make each month in a leap year. (Hint: Consider using objects.)</p>
 
-    
+            
+        </p>
+
+        <h3>The Report For a Leap Year At a Ksh. 45 rate.</h3>
+        <div class="outputcontainer">
+            <div class="ouputfield">
+                <code id="leapreportsoutput">
+                </code>
+                <p class="anim">___</p>
+            </div>
+        </div>
+
+        <h3>Further Exploration</h3>
+        <p>
 
 <script src="index.js" type="text/javascript"></script>
 </body>
