comparing diffrent prices

--- a/index.html
+++ b/index.html
@@ -94,6 +94,29 @@
 
         <h3>Further Exploration</h3>
         <p>
+            Attempt this part of the assignment to strengthen your skills in JavaScript,
+            it's optional but recommended:
+            <br /><br /><br />
+            Brookside Dairies decided to raise the rate at which they buy a litre from Ksh.45 to Ksh.49.60. <br />
+            <ul>
+                <li>
+                    Write a function that gives you
+                    a report on the comparison of how much you'll make every month and the difference from the previous
+                    rate.
+                </li>
+            </ul>
+
+        </p>
+        <h3>The Monthly Report Comparisson Between Ksh.45 rate and Ksh.49.60 rate for a Leap Year.</h3>
+        <div class="outputcontainer">
+            <div class="ouputfield">
+                <code id="reportsoutput">
+                </code>
+                <p class="anim">___</p>
+            </div>
+        </div>
+        
+
 
 <script src="index.js" type="text/javascript"></script>
 </body>
